# bifrost

./: .cirrus.yml  .gitignore  .travis.yml  Cargo.toml  README.md  azure-pipelines.yml
.github/workflows/: rust.yml
bifrost/: Cargo.toml  LICENSE-MIT  README.md
bifrost-ice/: Cargo.toml  README.md
bifrost-ice/src/: candidate.rs
bifrost-sdp/: Cargo.toml  README.md
bifrost-sdp/src/: attribute.rs  bandwidth.rs  connection_data.rs  email_address.rs  encryption_key.rs  information.rs  lib.rs  media_description.rs  media_information.rs  ntp.rs  ntp_time.rs  origin.rs  parse.rs  phone_number.rs  repeat_times.rs  session_description.rs  session_name.rs  test_util.rs  time_description.rs  time_zones.rs  timing.rs  uri.rs  url.rs  util.rs  version.rs
bifrost-stun/: Cargo.toml  README.md
bifrost-stun/src/: codec.rs  lib.rs  test_util.rs  util.rs
bifrost-stun/src/agent/: mod.rs
bifrost-stun/src/client/: builder.rs  dispatcher.rs  mod.rs
bifrost-stun/src/codec/: decoder.rs  encoder.rs  mod.rs
bifrost-stun/src/message/: class.rs  method.rs  mod.rs  raw_attribute.rs  transaction_id.rs
bifrost-stun/src/message/attribute/: mod.rs  xor_mapped_address.rs
bifrost-stun/tests/: client.rs
bifrost-turn/: Cargo.toml  README.md
bifrost-webrtc/: Cargo.toml  README.md
bifrost-webrtc/src/: codec.rs  lib.rs  peer_connection.rs
bifrost/src/: lib.rs
src/: lib.rs
