[package]
name = "bifrost-ice"
version = "0.1.0-alpha"
authors = ["Zizheng Tai <me@zizheng.me>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "A Rust implementation of the ICE protocol."
documentation = "https://docs.rs/bifrost-ice/0.1.0-alpha/bifrost_ice"
homepage = "https://bifrost.rs"
repository = "https://github.com/bifrost-rs/bifrost"
readme = "README.md"

[badges]
azure-devops = { project = "me0091/Bifrost", pipeline = "bifrost-rs.bifrost" }
travis-ci = { repository = "bifrost-rs/bifrost" }

[dependencies]
