[package]
name = "bifrost-sdp"
version = "0.1.0"
authors = ["Zizheng Tai <me@zizheng.me>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "A Rust implementation of the Session Description Protocol."
documentation = "https://docs.rs/bifrost-sdp/0.1.0/bifrost_sdp"
homepage = "https://bifrost.rs"
repository = "https://github.com/bifrost-rs/bifrost"
readme = "README.md"

[dependencies]
http = "0.1"
nom = "5.0"
vec1 = "1.4"

[dev-dependencies]
lazy_static = "1.3"
