[package]
name = "bifrost-stun"
version = "0.1.0-alpha"
authors = ["Zizheng Tai <me@zizheng.me>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "A Rust implementation of the STUN protocol."
documentation = "https://docs.rs/bifrost-stun/0.1.0-alpha/bifrost_stun"
homepage = "https://bifrost.rs"
repository = "https://github.com/bifrost-rs/bifrost"
readme = "README.md"

[dependencies]
bytecodec = "0.4"
bytes = "0.4"
futures-preview = { version = "=0.3.0-alpha.18", features = ["async-await", "nightly"] }
stun_codec = "0.1"
tokio-codec = "=0.2.0-alpha.4"
tokio-executor = "=0.2.0-alpha.4"
tokio-net = "=0.2.0-alpha.4"
tokio-sync = "=0.2.0-alpha.4"
tokio-timer = "=0.3.0-alpha.4"

[dev-dependencies]
tokio-test = "=0.2.0-alpha.4"
