[package]
name = "bifrost-stun"
version = "0.1.0-alpha"
authors = ["Zizheng Tai <me@zizheng.me>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "A Rust implementation of the STUN protocol."
documentation = "https://docs.rs/bifrost-stun/0.1.0-alpha/bifrost_stun"
homepage = "https://bifrost.rs"
repository = "https://github.com/bifrost-rs/bifrost"
readme = "README.md"

[dependencies]
bytes = "0.4"
futures-util-preview = { version = "=0.3.0-alpha.18", features = ["nightly", "cfg-target-has-atomic"] }
nom = "5.0"
tokio-codec = "=0.2.0-alpha.4"
tokio-sync = "=0.2.0-alpha.4"
tokio-timer = "=0.3.0-alpha.4"

[dev-dependencies]
bytecodec = "0.4"
stun_codec = "0.1"
tokio-executor = "=0.2.0-alpha.4"
tokio-test = "=0.2.0-alpha.4"
