[package]
name = "bifrost"
version = "0.4.0-alpha.3"
authors = ["Zizheng Tai <me@zizheng.me>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Real-time media and data communication for Rust."
documentation = "https://docs.rs/bifrost/0.4.0-alpha.3/bifrost"
homepage = "https://bifrost.rs"
repository = "https://github.com/bifrost-rs/bifrost"
readme = "README.md"

[badges]
travis-ci = { repository = "bifrost-rs/bifrost" }

[dependencies]
bifrost-ice = { version = "0.1.0-alpha", path = "../bifrost-ice" }
bifrost-sdp = { version = "0.1.0-alpha", path = "../bifrost-sdp" }
bifrost-stun = { version = "0.1.0-alpha", path = "../bifrost-stun" }
